include/ava.h

#ifndef AVALANG_H
#define AVALANG_H

/*
 * AvaLang public C API.
 *
 * This is the ONLY header external bindings (C#, Python, Java, Rust, ...)
 * need to consume. It is plain C (extern "C"), no C++ types cross this
 * boundary, so there is no name-mangling / ABI fragility issue for
 * bindings generated by any FFI toolchain (P/Invoke, ctypes, JNA, etc).
 *
 * Ownership model:
 *   - All Ava*Handle types are opaque pointers owned by the library.
 *   - Callers never allocate or free the internals directly, only via
 *     the matching ava_*_destroy function.
 *   - ava_value_t is a plain-old-data struct (tagged union), safe to pass
 *     by value across the ABI boundary.
 */

#include <stdint.h>
#include <stddef.h>

#ifdef __cplusplus
extern "C" {
#endif

#if defined(_WIN32)
  #define AVA_API __declspec(dllexport)
#else
  #define AVA_API __attribute__((visibility("default")))
#endif

/* ---------------------------------------------------------------------
 * Opaque handles
 * ------------------------------------------------------------------- */

typedef struct AvaVM        AvaVM;        /* one VM instance / isolate   */
typedef struct AvaModule    AvaModule;    /* compiled bytecode module    */
typedef struct AvaCoroutine AvaCoroutine; /* suspendable execution state */

/* ---------------------------------------------------------------------
 * Value type: tagged union passed by value across the ABI.
 * Strings/Lists/Dicts/Functions/Instances are represented by a handle
 * (ref-counted internally); the C API never exposes their raw layout.
 * ------------------------------------------------------------------- */

typedef enum AvaValueType {
    AVA_NIL = 0,
    AVA_BOOL,
    AVA_NUMBER,
    AVA_STRING,
    AVA_LIST,
    AVA_DICT,
    AVA_FUNCTION,
    AVA_INSTANCE,
    AVA_CLASS,
    AVA_COROUTINE,
    AVA_NATIVE,
    AVA_BOUND
} AvaValueType;

typedef struct AvaRef { uint64_t id; } AvaRef;

typedef struct ava_value_t {
    AvaValueType type;
    union {
        int      b;      /* AVA_BOOL     */
        double   n;       /* AVA_NUMBER   */
        AvaRef   ref;      /* everything ref-counted (string/list/dict/...) */
    } as;
} ava_value_t;

typedef struct {
    const char* key;
    size_t key_len;
    ava_value_t value;
} ava_dict_pair_t;

/* ---------------------------------------------------------------------
 * Native function callback: how host languages expose functions to
 * scripts. Called by the VM with args already marshalled as ava_value_t.
 * ------------------------------------------------------------------- */

typedef ava_value_t (*AvaNativeFn)(
    AvaVM* vm,
    const ava_value_t* args,
    size_t arg_count,
    void* user_data
);

/* ---------------------------------------------------------------------
 * VM lifecycle
 * ------------------------------------------------------------------- */

AVA_API AvaVM* ava_vm_create(void);
AVA_API void   ava_vm_destroy(AvaVM* vm);

/* Registers a native (host) function under `name`, callable from scripts.
 * `user_data` is passed back unchanged on every call (closure context). */
AVA_API void ava_vm_register_native(
    AvaVM* vm,
    const char* name,
    AvaNativeFn fn,
    void* user_data
);

/* ---------------------------------------------------------------------
 * Compilation
 * ------------------------------------------------------------------- */

/* Compiles source text into a bytecode module owned by the caller.
 * On failure returns NULL and fills out_error (caller must free with
 * ava_string_free) with a human-readable diagnostic. */
AVA_API AvaModule* ava_compile(
    AvaVM* vm,
    const char* source,
    const char* source_name,
    char** out_error
);

AVA_API void ava_module_destroy(AvaModule* module);

/* ---------------------------------------------------------------------
 * Execution
 * ------------------------------------------------------------------- */

/* Runs the module's top-level code. Returns the last expression value
 * or AVA_NIL. */
AVA_API ava_value_t ava_run(AvaVM* vm, AvaModule* module, char** out_error);

/* Looks up a top-level function/global by name and calls it. */
AVA_API ava_value_t ava_call(
    AvaVM* vm,
    ava_value_t callable,
    const ava_value_t* args,
    size_t arg_count,
    char** out_error
);

AVA_API ava_value_t ava_get_global(AvaVM* vm, const char* name);
AVA_API void ava_set_global(AvaVM* vm, const char* name, ava_value_t value);

AVA_API ava_value_t ava_import(AvaVM* vm, const char* module_path, const char* alias, char** out_error);

/* ---------------------------------------------------------------------
 * Coroutines
 * ------------------------------------------------------------------- */

AVA_API AvaCoroutine* ava_coroutine_create(AvaVM* vm, ava_value_t function);
AVA_API void          ava_coroutine_destroy(AvaCoroutine* co);

typedef enum AvaCoStatus { AVA_CO_SUSPENDED, AVA_CO_RUNNING, AVA_CO_DEAD } AvaCoStatus;

/* Resumes execution. Writes result values into out_values (caller-owned
 * buffer of out_capacity slots) and the count into out_count. */
AVA_API AvaCoStatus ava_coroutine_resume(
    AvaVM* vm,
    AvaCoroutine* co,
    const ava_value_t* args,
    size_t arg_count,
    ava_value_t* out_values,
    size_t out_capacity,
    size_t* out_count
);

/* ---------------------------------------------------------------------
 * Value helpers (construction / inspection of ref-counted values)
 * ------------------------------------------------------------------- */

AVA_API ava_value_t ava_string_create(AvaVM* vm, const char* utf8, size_t len);
AVA_API const char* ava_string_data(AvaVM* vm, ava_value_t str, size_t* out_len);

AVA_API ava_value_t ava_list_create(AvaVM* vm);
AVA_API void         ava_list_append(AvaVM* vm, ava_value_t list, ava_value_t item);
AVA_API size_t       ava_list_length(AvaVM* vm, ava_value_t list);
AVA_API ava_value_t  ava_list_get(AvaVM* vm, ava_value_t list, size_t index);
AVA_API void         ava_list_insert(AvaVM* vm, ava_value_t list, size_t index, ava_value_t item);
AVA_API void         ava_list_remove(AvaVM* vm, ava_value_t list, size_t index);

AVA_API ava_value_t ava_dict_create(AvaVM* vm);
AVA_API void         ava_dict_set(AvaVM* vm, ava_value_t dict, const char* key, ava_value_t value);
AVA_API ava_value_t  ava_dict_get(AvaVM* vm, ava_value_t dict, const char* key);
AVA_API size_t       ava_dict_length(AvaVM* vm, ava_value_t dict);
AVA_API size_t       ava_dict_entries(AvaVM* vm, ava_value_t dict, void** out_entries);
AVA_API int          ava_dict_contains(AvaVM* vm, ava_value_t dict, const char* key, size_t key_len);

/* Ref-counting: any ava_value_t returned to the host that holds a ref
 * (string/list/dict/function/instance/coroutine) must be released when
 * the host is done with it. AVA_NIL/AVA_BOOL/AVA_NUMBER are no-ops. */
AVA_API void ava_value_retain(AvaVM* vm, ava_value_t value);
AVA_API void ava_value_release(AvaVM* vm, ava_value_t value);

AVA_API void ava_string_free(char* s); /* frees strings returned via out_error, etc. */

#ifdef __cplusplus
}
#endif

#endif /* AVALANG_H */